--- a/.github/workflows/lost-pixel-update.yml
+++ b/.github/workflows/lost-pixel-update.yml
@@ -1,4 +1,4 @@
-on: [push]
+on: [workflow_dispatch]
 
 jobs:
   build:
@@ -8,7 +8,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
@@ -17,16 +17,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Storybook
+      - name: Build Storybook components
         run: npm run build-storybook
 
-      - name: Lost Pixel
+      - name: Run Lost Pixel container
         id: lp
         uses: lost-pixel/lost-pixel@v2.11.0
         env:
           LOST_PIXEL_MODE: update
 
-      - name: Pull request
+      - name: Create Pull request
         uses: peter-evans/create-pull-request@v4
         if: ${{ failure() && steps.lp.conclusion == 'failure' }}
         with:
